# Estimate-AI--AI-powered-real-estate-investment-tool

./: README.md  appreciation_analyzer.py  complete_property_dataset.csv  database.py  emi_calculator.py  fast_ml_model.py  fast_model_cache.pkl  investment_analyzer.py  main.py  portfolio_analyzer.py  pyproject.toml  requirements.txt
